Prise en charge des modèles contenu dans les sous-dossiers Le constructeur QueryBuilder::getResult() devient QueryBuilder::getResult($classSubPath) ce nouveau parametre permet de renseigné le dossier ou se trouve le modéle en partant de la racine

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 /vendor
 /test.php
 /commit.txt
-/templates/user
-/src/Controller/user
-/src/Repository/user
+/templates/User
+/src/Controller/User
+/src/Repository/User
+/src/Model/User
